# src/controllers/personnel.js
@@ -4,6 +4,20 @@ const Personnel = require("../models/personnel");
 
 module.exports = {
   list: async (req, res) => {
+    /* 
+            #swagger.tags = ['Personnels']
+            #swagger.summary = 'List Personnels'
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+            }
+        */
     const result = await res.getModelList(Personnel);
     res.status(200).send({
       error: false,
@@ -12,6 +26,17 @@ module.exports = {
     });
   },
   create: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Create Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
     const isLead = req.body?.isLead || false;
 
     if (isLead) {
@@ -31,6 +56,10 @@ module.exports = {
     });
   },
   read: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+        */
     const result = await Personnel.findById(req.params.id);
     res.status(200).send({
       error: false,
@@ -38,6 +67,17 @@ module.exports = {
     });
   },
   update: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Update Personnel"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
+        */
     const isLead = req.body?.isLead || false;
 
     if (isLead) {
@@ -61,6 +101,10 @@ module.exports = {
     });
   },
   delete: async (req, res) => {
+    /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Delete Personnel"
+        */
     const result = await Personnel.findByIdAndDelete(req.params.id);
     res.status(result.deletedCount ? 204 : 404).send({
       error: true,
